# CPP-Neural-Network

./: .gitignore  README.md
include/Layers/: Layers.hpp
include/utils/: utils.hpp
src/: CMakeLists.txt  main.cpp
src/Accuracy/: Accuracy.cpp  Accuracy.hpp
src/Activation/: Activation.hpp  ActivationFunc.cpp
src/ActivationFunction/: ActivationFunction.cpp  ActivationFunction.hpp
src/Layers/: DenseLayer.cpp  DenseLayer.hpp  Layers.cpp  Layers.hpp
src/Loss/: Loss.cpp  Loss.hpp
src/Model/: Model.cpp  Model.hpp
src/Optimizer/: Optimizer.cpp  Optimizer.hpp
src/utils/: utils.cpp  utils.hpp
